kubernetes/dev/babybites-medusajs/medusajs/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: medusa-backend
  namespace: babybites-medusajs
spec:
  selector:
    app: medusa-backend
  ports:
  - port: 9000
