kubernetes/dev/babybites-medusajs/medusajs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: medusa-ingress
  namespace: babybites-medusajs
spec:
  rules:
  - host: medusa.babybites.pt
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: medusa-backend
            port:
              number: 9000
